# SimEx

./: .env.sample  .gitignore  Dockerfile  Modifier.py  README.md  SimEX_draftTemp_v4.ipynb  SimEX_v2.ipynb  SimEX_v3.ipynb  SimEX_v4.ipynb  SimEX_v5.ipynb  SimEX_v6_FunGUI.ipynb  Simulator.py  Validator.py  depWIN.txt  docker-compose.yml  global_settings.py  gui.ipynb  output.txt  pyproject.toml  requirements-dev.txt  requirements.txt  requirementsAMY.txt  requirementsAmy.txt  requirementsSimEx.txt  setup.py  setup_venv.bat  setup_venv.sh
.github/workflows/: python-app.yml
examples/: simex_run.py
examples/notebooks/: SimEx_test_notebook.ipynb
model_MD/: calibrators_new.add.xml  detectors.add.xml  highway_model.sumocfg  my_net_9_1_2024.net.xml  routes_distribution.rou.xml
notebooks/: DLASIUT_find_best_scenarios.py  Logger.py  Modifier.py  ModifierController.py  Modifiers.py  SimEX_Main_v1.ipynb  SimEX_tailing.ipynb  SimEX_v2.ipynb  SimEX_v3.ipynb  SimEX_v4.ipynb  SimEX_v5.ipynb  SimEX_v6_FunGUI.ipynb  SimEX_v7_Main.ipynb  SimExAmy_old.ipynb  SimEx_SUMOvsl_notebook.ipynb  SimEx_SUMOvsl_notebook_NOTUSED.ipynb  SimEx_loop.ipynb  SimEx_sumo_novsl_notebook.ipynb  SimEx_sumo_plot.ipynb  SimEx_sumo_vsl_notebook.ipynb  SimEx_test_notebook.ipynb  Simulator.py  SimulatorController.py  Simulators.py  Validator copy.py  Validator.py  ValidatorController.py  Validators.py  compare_results.ipynb  components_configuration.py  controller_modifier_scenarios.py  global_settings.py  log.txt  logger-novsl.pkl  logger-vsl.pkl  logger_utils.py  main_tailing.py  modifier.py  modifier_controller.py  run_simex.py  (+20 more)
notebooks/old_notebooks/: simEX_funGUI.ipynb
simex/: __init__.py
tests/: test_simex.py
(+20 files in other folders)
